# CES35-lab02

./: CMakeLists.txt  HTTPReq.cpp  HTTPResp.h  Makefile  README.md  echo-client  echo-client.cpp  echo-server  echo-server.cpp  main.cpp  teste
Client/: CMakeLists.txt  web-client.cpp  web-client.h
HTTP/: CMakeLists.txt
HTTP/Req/: HTTPReq.cpp  HTTPReq.h  objectToBytes.cpp  test.cpp
HTTP/Resp/: HTTPResp.cpp  HTTPResp.h  draft.cpp  helpers.cpp  test.cpp  teste.html
Server/: CMakeLists.txt  Makefile  web-server.cpp  web-server.h
Server/tmp/: index.html
exemplosDoProf/: echo-client.cpp  echo-server.cpp  multi-thread
functionals/: CMakeLists.txt
functionals/Inc/: constants.h  ip_functions.h
functionals/Src/: ip_functions.cpp
functions/: CMakeLists.txt
functions/Src/: ip_functions.cpp
web-server/: web-server.cpp
